# galopen

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
lp/: biome.json  next-sitemap.config.js  package.json
lp/messages/: en.json  ja.json
lp/public/: robots.txt
lp/src/app/[locale]/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
src/: App.tsx  i18n.ts
src-tauri/: .tauri-private-key.pub  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: calendar.rs  lib.rs  main.rs  meeting_url.rs  scheduler.rs
src/components/: CalendarFilter.tsx  EventCard.tsx  EventList.tsx  Settings.tsx
src/hooks/: useCalendars.ts  useDisplaySettings.ts  useEvents.ts  usePermission.ts
src/lib/: dateRange.ts  tauri.ts
src/pages/: Home.tsx  PermissionRequest.tsx
src/types/: index.ts
