[package]
name = "galopen"
version = "0.2.0"
description = "Auto-open meeting URLs from macOS Calendar"
authors = ["piro"]
edition = "2021"

[lib]
name = "galopen_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
log = "0.4"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSDate", "NSArray", "NSPredicate", "NSString", "NSError", "NSURL"] }
objc2-event-kit = { version = "0.3", features = [
    "EKTypes",
    "EKObject",
    "EKCalendar",
    "EKCalendarItem",
    "EKEvent",
    "EKEventStore",
] }
block2 = "0.6"
sys-locale = "0.3"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }

[profile.release]
panic = "unwind"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
