[package]
name = "galopen"
version = "0.6.3"
description = "Auto-open meeting URLs from macOS Calendar"
authors = ["piro"]
edition = "2021"

[lib]
name = "galopen_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-store = "2.4.3"
tauri-plugin-opener = "2.5.4"
tauri-plugin-single-instance = "2.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
open = "5.3.5"
tokio = { version = "1.52.3", features = ["full"] }
chrono = { version = "0.4.45", features = ["serde"] }
regex = "1.12.4"
log = "0.4.32"
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", features = ["NSDate", "NSArray", "NSPredicate", "NSString", "NSError", "NSURL"] }
objc2-event-kit = { version = "0.3.2", features = [
    "EKTypes",
    "EKObject",
    "EKCalendar",
    "EKCalendarItem",
    "EKEvent",
    "EKEventStore",
] }
block2 = "0.6.2"
sys-locale = "0.3.2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-dialog = "2.7.1"

[profile.release]
panic = "unwind"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
